--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 .main-report {
   margin-left: 50px;
+  margin-top: 50px;
+}
+.second-main-report {
+  margin-left: 50px;
+  margin-top: 150px;
 }
 .customer-details {
   width: 100%;
+  padding-left: 5px;
 }
 .name-time-sr {
   width: 100%;
@@ -38,21 +44,33 @@
   width: 100%;
   display: flex;
   margin-top: 10px;
+  padding-left: 5px;
 }
 .std-gold {
   display: flex;
   min-width: 30%;
+  font-weight: bold;
+  font-size: larger;
 }
 .std-karat {
   display: flex;
   min-width: 20%;
+  font-weight: bold;
+  font-size: larger;
 }
 .std-weight {
   display: flex;
   min-width: 50%;
+  font-weight: bold;
+  font-size: larger;
 }
-.first-separator {
-  width: 70%;
+#first-separator {
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+#second-separator {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 /* .vl {
   border-left: 1px solid black;
@@ -69,6 +87,7 @@
 .std-result-set {
   width: 100%;
   display: flex;
+  padding-left: 5px;
 }
 .first-block-element {
   display: inline;
@@ -98,4 +117,9 @@
   display: inline;
   width: 20%;
   margin-left: -100px;
+}
+.font-settings {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  letter-spacing: 1px;
+  font-weight: 200;
 }
