Added login authentication with firebase.

--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,7 @@
   letter-spacing: 1px;
   font-weight: 200;
 }
+.login-container {
+  background-color: lemonchiffon;
+  border: 1px solid black;
+}
