--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,28 @@
-/* body {
-  width: 230mm;
-  height: 100%;
-  margin: 0 auto;
-  padding: 0;
-  font-size: 12pt;
-  background: rgb(204, 204, 204);
+/* width */
+
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-* {
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-} */
+/* Track */
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px white;
+  border-radius: 10px;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: gray;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
 
 .main-page {
   width: 210mm;
