--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 }
 
 .copy-form {
-  padding-top: 235px;
+  padding-top: 225px;
 }
 
 .sub-page {
@@ -158,7 +158,7 @@
   height: 155px;
   padding-left: 5px;
   padding-right: 5px;
-  margin-top: -9px
+  margin-top: -9px;
 }
 
 hr.separator {
@@ -172,7 +172,8 @@ hr.separator {
 }
 
 @media print {
-  html, body {
+  html,
+  body {
     width: 210mm;
     height: 297mm;
   }
