--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,9 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #b30000;
 }
-
+* {
+  outline: none !important;
+}
 .main-page {
   width: 210mm;
   min-height: 297mm;
@@ -224,4 +226,49 @@ hr.separator {
   display: flex;
   justify-content: center;
   margin: auto;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #3f51b5;
+  padding: 10px 10px;
+}
+
+/* Style the header links */
+.header a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+  font-size: 20px;
+  font-weight: bold;
+  color: aliceblue;
+  margin-top: 5px;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
 }
