Removed sub page hight

--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,11 @@
 }
 
 .copy-form {
-  padding-top: 225px;
+  margin-top: 225px;
 }
 
 .sub-page {
   padding: 1cm;
-  height: 297mm;
   padding-top: 150px;
 }
 
