--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 }
 
 .copy-form {
-  margin-top: 225px;
+  margin-top: 223px;
 }
 
 .sub-page {
@@ -90,23 +90,24 @@
 }
 
 .gold-karat-weight {
-  width: 80%;
-  font-size: larger;
-  font-weight: bold;
+  width: 100%;
+  font-size: x-large;
+  font-weight: bolder;
   display: flex;
   margin: auto;
   margin-left: 30px;
   padding-top: 8px;
   padding-bottom: 8px;
+  transform: scaleY(1.1);
 }
 
 .gold {
-  width: 30%;
+  width: 26%;
   display: inline-block;
 }
 
 .karat {
-  width: 30%;
+  width: 26%;
   display: inline-block;
 }
 
@@ -137,9 +138,9 @@
 }
 
 .third-block {
-  width: 23%;
+  width: 25%;
   display: inline-block;
-  margin-left: 40px;
+  margin-left: 50px;
 }
 
 .element-block {
